Change ordering of music and tech sections

--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <!-- ID only used for JS -->
         <ul id="nav-list">
           <li><a href="#about-me">About Me</a></li>
-          <li><a href="#technology">Technology</a></li>
           <li><a href="#music">Music</a></li>
+          <li><a href="#technology">Technology</a></li>
         </ul>
       </nav>
 
@@ -319,6 +319,54 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
         <section>
           <h2>Portfolio</h2>
+
+          <section id="music">
+            <h3>Music</h3>
+
+            <article>
+              <h4>Castle On The Hill</h4>
+              <p>
+                I covered
+                <a
+                  class="external-link"
+                  target="_blank"
+                  rel="noopener"
+                  href="https://www.edsheeran.com"
+                  >Ed Sheeran's</a
+                >
+                song "Castle on the Hill" and released it as part of Grey
+                Warren's album
+                <a
+                  class="external-link"
+                  target="_blank"
+                  rel="noopener"
+                  href="https://linktr.ee/thesongsweleavebehind"
+                  ><span class="italic">The Songs We Leave Behind</span></a
+                >. I sang and played guitar for the song, as well as helping
+                produce it.
+              </p>
+              <iframe
+                title="Castle on the Hill by Ethan Bayer on Spotify"
+                src="https://open.spotify.com/embed/track/31JWpNe9bWB4ZHVZvNkBZQ?utm_source=generator&theme=0"
+                width="100%"
+                height="152"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </article>
+
+            <article>
+              <h4>Performance</h4>
+
+              <p>
+                I have played guitar for over nine years, and I have performed
+                various times.
+              </p>
+            </article>
+          </section>
+
           <section id="technology">
             <h3>Technology</h3>
 
@@ -326,9 +374,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
               <h4>Conditional Switch</h4>
               <p>
                 Conditional Switch is a video game made using the Unity game
-                engine as well as C# for scripting. In total it took me a few
-                months to finish, and you can play it in your browser or
-                download the game for Windows and MacOS.
+                engine as well as C# for scripting. You can play it in your
+                browser or download the game for Windows and MacOS.
               </p>
               <a
                 class="content-button"
@@ -428,53 +475,6 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                   href="https://openwrt.org"
                   >OpenWRT</a
                 >.
-              </p>
-            </article>
-          </section>
-
-          <section id="music">
-            <h3>Music</h3>
-
-            <article>
-              <h4>Castle On The Hill</h4>
-              <p>
-                I covered
-                <a
-                  class="external-link"
-                  target="_blank"
-                  rel="noopener"
-                  href="https://www.edsheeran.com"
-                  >Ed Sheeran's</a
-                >
-                song "Castle on the Hill" and released it as part of Grey
-                Warren's album
-                <a
-                  class="external-link"
-                  target="_blank"
-                  rel="noopener"
-                  href="https://linktr.ee/thesongsweleavebehind"
-                  ><span class="italic">The Songs We Leave Behind</span></a
-                >. I sang and played guitar for the song, as well as helping
-                produce it.
-              </p>
-              <iframe
-                title="Castle on the Hill by Ethan Bayer on Spotify"
-                src="https://open.spotify.com/embed/track/31JWpNe9bWB4ZHVZvNkBZQ?utm_source=generator&theme=0"
-                width="100%"
-                height="152"
-                frameborder="0"
-                allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"
-              ></iframe>
-            </article>
-
-            <article>
-              <h4>Performance</h4>
-
-              <p>
-                I have played guitar for over nine years, and I have performed
-                various times.
               </p>
             </article>
           </section>
