Added temporary extra contact section

--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
           <li><a href="#about-me">About Me</a></li>
           <li><a href="#music">Music</a></li>
           <li><a href="#technology">Technology</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
 
@@ -479,8 +480,16 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
             </article>
           </section>
         </section>
-      </main>
 
+        <!-- Contact Section: TEMP -->
+        <section id="contact">
+          <h2>Contact</h2>
+          <p>
+            You can email me at:
+            <a href="mailto:studioethanb@gmail.com">studioethanb@gmail.com</a>.
+          </p>
+        </section>
+      </main>
       <footer>
         <p class="copyright">Copyright &copy; 2025 Ethan Bayer</p>
       </footer>
