--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
               />
               <path
                 class="cls-1"
-                d="M969.41,331.94c-10.42,0-19.4-1.95-26.95-5.83-7.56-3.88-13.35-9.31-17.38-16.28-4.04-6.96-6.05-15.21-6.05-24.75s1.32-17.82,3.96-26.18c2.64-8.36,6.6-15.84,11.88-22.44,5.28-6.6,11.99-11.8,20.13-15.62,8.14-3.81,17.71-5.72,28.71-5.72h3.96c9.38,0,17.56,1.69,24.53,5.06,6.96,3.38,12.35,8.11,16.17,14.19,3.81,6.09,5.72,13.24,5.72,21.45,0,2.2-.11,4.44-.33,6.71-.22,2.28-.52,4.73-.88,7.37-.37,2.64-.85,5.65-1.43,9.02h-75.9c-.29,1.76-.55,3.63-.77,5.61s-.33,3.71-.33,5.17c0,5.87,1.68,10.56,5.06,14.08,3.37,3.52,8.21,5.28,14.52,5.28,4.98,0,9.13-1.02,12.43-3.08,3.3-2.05,5.83-4.73,7.59-8.03,1.76-3.3,2.93-6.71,3.52-10.23h32.34c-1.18,8.8-4.37,16.54-9.57,23.21-5.21,6.68-11.92,11.85-20.13,15.51-8.22,3.66-17.53,5.5-27.94,5.5h-2.86ZM958.19,260.88h41.14c.29-1.17.47-2.23.55-3.19.07-.95.11-2.01.11-3.19,0-5.13-1.54-9.16-4.62-12.1-3.08-2.93-7.34-4.4-12.76-4.4-6.02,0-11.26,1.95-15.73,5.83-4.48,3.89-7.37,9.57-8.69,17.05Z"
+                d="M969.41,331.94c-10.42,0-19.4-1.95-26.95-5.83-7.56-3.88-13.35-9.31-17.38-16.28-4.04-6.96-6.05-15.21-6.05-24.75s1.32-17.82,3.96-26.18c2.64-8.36,6.6-15.84,11.88-22.44,5.28-6.6,11.99-11.8,20.13-15.62,8.14-3.81,17.71-5.72,28.71-5.72h3.96c9.38,0,17.56,1.69,24.53,5.06,6.96,3.38,12.35,8.11,16.17,14.19,3.81,6.09,5.72,13.24,5.72,21.45,0,2.2-.11,4.44-.33,6.71-.22,2.28-.52,4.73-.88,7.37-.37,2.64-.85,5.65-1.43,9.02h-75.9c-.29,1.76-.55,3.63-.77,5.61s-.33,3.71-.33,5.17c0,5.87,1.68,10.56,5.06,14.08,3.37,3.52,8.21,5.28,14.52,5.28,4.98,0,9.13-1.02,12.43-3.08,3.3-2.05,5.83-4.73,7.59-8.03,1.76-3.3,2.93-6.71,3.52-10.23h32.34c-1.18,8.8-4.37,16.54-9.57,23.21-5.21,6.68-11.92,11.85-20.13,15.51-8.22,3.66-17.53,5.5-27.94,5.5h-2.86ZM958.19,260.88h31.14c.29-1.17.47-2.23.55-3.19.07-.95.11-2.01.11-3.19,0-5.13-1.54-9.16-4.62-12.1-3.08-2.93-7.34-4.4-12.76-4.4-6.02,0-11.26,1.95-15.73,5.83-4.48,3.89-7.37,9.57-8.69,17.05Z"
               />
               <path
                 class="cls-1"
@@ -219,7 +219,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 />
                 <path
                   class="cls-1"
-                  d="M969.41,331.94c-10.42,0-19.4-1.95-26.95-5.83-7.56-3.88-13.35-9.31-17.38-16.28-4.04-6.96-6.05-15.21-6.05-24.75s1.32-17.82,3.96-26.18c2.64-8.36,6.6-15.84,11.88-22.44,5.28-6.6,11.99-11.8,20.13-15.62,8.14-3.81,17.71-5.72,28.71-5.72h3.96c9.38,0,17.56,1.69,24.53,5.06,6.96,3.38,12.35,8.11,16.17,14.19,3.81,6.09,5.72,13.24,5.72,21.45,0,2.2-.11,4.44-.33,6.71-.22,2.28-.52,4.73-.88,7.37-.37,2.64-.85,5.65-1.43,9.02h-75.9c-.29,1.76-.55,3.63-.77,5.61s-.33,3.71-.33,5.17c0,5.87,1.68,10.56,5.06,14.08,3.37,3.52,8.21,5.28,14.52,5.28,4.98,0,9.13-1.02,12.43-3.08,3.3-2.05,5.83-4.73,7.59-8.03,1.76-3.3,2.93-6.71,3.52-10.23h32.34c-1.18,8.8-4.37,16.54-9.57,23.21-5.21,6.68-11.92,11.85-20.13,15.51-8.22,3.66-17.53,5.5-27.94,5.5h-2.86ZM958.19,260.88h41.14c.29-1.17.47-2.23.55-3.19.07-.95.11-2.01.11-3.19,0-5.13-1.54-9.16-4.62-12.1-3.08-2.93-7.34-4.4-12.76-4.4-6.02,0-11.26,1.95-15.73,5.83-4.48,3.89-7.37,9.57-8.69,17.05Z"
+                  d="M969.41,331.94c-10.42,0-19.4-1.95-26.95-5.83-7.56-3.88-13.35-9.31-17.38-16.28-4.04-6.96-6.05-15.21-6.05-24.75s1.32-17.82,3.96-26.18c2.64-8.36,6.6-15.84,11.88-22.44,5.28-6.6,11.99-11.8,20.13-15.62,8.14-3.81,17.71-5.72,28.71-5.72h3.96c9.38,0,17.56,1.69,24.53,5.06,6.96,3.38,12.35,8.11,16.17,14.19,3.81,6.09,5.72,13.24,5.72,21.45,0,2.2-.11,4.44-.33,6.71-.22,2.28-.52,4.73-.88,7.37-.37,2.64-.85,5.65-1.43,9.02h-75.9c-.29,1.76-.55,3.63-.77,5.61s-.33,3.71-.33,5.17c0,5.87,1.68,10.56,5.06,14.08,3.37,3.52,8.21,5.28,14.52,5.28,4.98,0,9.13-1.02,12.43-3.08,3.3-2.05,5.83-4.73,7.59-8.03,1.76-3.3,2.93-6.71,3.52-10.23h32.34c-1.18,8.8-4.37,16.54-9.57,23.21-5.21,6.68-11.92,11.85-20.13,15.51-8.22,3.66-17.53,5.5-27.94,5.5h-2.86ZM958.19,260.88h31.14c.29-1.17.47-2.23.55-3.19.07-.95.11-2.01.11-3.19,0-5.13-1.54-9.16-4.62-12.1-3.08-2.93-7.34-4.4-12.76-4.4-6.02,0-11.26,1.95-15.73,5.83-4.48,3.89-7.37,9.57-8.69,17.05Z"
                 />
                 <path
                   class="cls-1"
@@ -239,7 +239,6 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
       <nav>
         <ul id="nav-list">
-          <li><a href="#about-me">About Me</a></li>
           <li><a href="#music">Music</a></li>
           <li><a href="#technology">Technology</a></li>
         </ul>
@@ -344,152 +343,148 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
     <div class="scrolling-content">
       <main>
-        <section>
-          <h2>Portfolio</h2>
+        <section id="music">
+          <h2>Music</h2>
 
-          <section id="music">
-            <h3>Music</h3>
+          <div class="portfolio-grid">
+            <article>
+              <h3>Castle on the Hill</h3>
+              <img
+                srcset="
+                  images/portfolio/album-cover-1x.jpg 1x,
+                  images/portfolio/album-cover-2x.jpg 2x
+                "
+                src="images/portfolio/album-cover-1x.jpg"
+                alt="Album cover for The Songs We Leave Behind — a flaming treble clef."
+                width="250"
+                height="180"
+              />
+              <p>
+                I covered Ed Sheeran's song "Castle on the Hill" and released it
+                as part of Grey Warren's album
+                <span class="italic">The Songs We Leave Behind</span>. I sang
+                and played guitar for the song, as well as helping produce it.
+              </p>
+            </article>
 
-            <div class="portfolio-grid">
-              <article>
-                <h4>Castle On The Hill</h4>
-                <img
-                  srcset="
-                    images/portfolio/album-cover-1x.jpg 1x,
-                    images/portfolio/album-cover-2x.jpg 2x
-                  "
-                  src="images/portfolio/album-cover-1x.jpg"
-                  alt="Album cover for The Songs We Leave Behind — a flaming treble clef."
-                  width="250"
-                  height="180"
-                />
-                <p>
-                  I covered Ed Sheeran's song "Castle on the Hill" and released
-                  it as part of Grey Warren's album
-                  <span class="italic">The Songs We Leave Behind</span>. I sang
-                  and played guitar for the song, as well as helping produce it.
-                </p>
-              </article>
+            <article>
+              <h3>Performance</h3>
+              <!-- TODO: Add image -->
+              <img alt="" width="250" height="180" />
+              <p>
+                I have played guitar for over nine years, and I have performed
+                various times.
+              </p>
+            </article>
+          </div>
+        </section>
 
-              <article>
-                <h4>Performance</h4>
-                <!-- TODO: Add image -->
-                <img alt="" width="250" height="180" />
-                <p>
-                  I have played guitar for over nine years, and I have performed
-                  various times.
-                </p>
-              </article>
-            </div>
-          </section>
+        <section id="technology">
+          <h2>Technology</h2>
 
-          <section id="technology">
-            <h3>Technology</h3>
+          <div class="portfolio-grid">
+            <article>
+              <h3>Conditional Switch</h3>
+              <img
+                src="images/portfolio/conditional-switch.svg"
+                alt="A mockup of the game, including the player, saws, and octagons with question marks in them."
+                width="250"
+                height="180"
+              />
+              <p>
+                Conditional Switch is a video game made using the Unity game
+                engine as well as C# for scripting. You can play it in your
+                browser or download the game for Windows and MacOS.
+              </p>
+            </article>
 
-            <div class="portfolio-grid">
-              <article>
-                <h4>Conditional Switch</h4>
-                <img
-                  src="images/portfolio/conditional-switch.svg"
-                  alt="A mockup of the game, including the player, saws, and octagons with question marks in them."
-                  width="250"
-                  height="180"
-                />
-                <p>
-                  Conditional Switch is a video game made using the Unity game
-                  engine as well as C# for scripting. You can play it in your
-                  browser or download the game for Windows and MacOS.
-                </p>
-              </article>
+            <article>
+              <h3>Personal Website</h3>
+              <!-- TODO: Add image -->
+              <img alt="" width="250" height="180" />
+              <p>
+                I made this website, my personal portfolio, from scratch with
+                <abbr title="HyperText Markup Language">HTML</abbr> and
+                <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
+                over the course of a month.
+              </p>
+            </article>
 
-              <article>
-                <h4>Personal Website</h4>
-                <!-- TODO: Add image -->
-                <img alt="" width="250" height="180" />
-                <p>
-                  I made this website, my personal portfolio, from scratch with
-                  <abbr title="HyperText Markup Language">HTML</abbr> and
-                  <abbr title="Cascading Style Sheets">CSS</abbr>, which I
-                  learned over the course of a month.
-                </p>
-              </article>
+            <article>
+              <h3>AutoCompressors</h3>
+              <img
+                srcset="
+                  images/portfolio/autocompressors-1x.jpg 1x,
+                  images/portfolio/autocompressors-2x.jpg 2x
+                "
+                src="images/portfolio/autocompressors-1x.jpg"
+                alt="A screenshot of a GUI made for the mod, where the auto compressors can be edited."
+                width="250"
+                height="180"
+              />
+              <p>
+                AutoCompressors is a Spigot plugin for the video game Minecraft,
+                adding new functionality in the form of easily customizable
+                items that, when in your inventory, can automatically convert
+                specific items into other ones.
+              </p>
+            </article>
 
-              <article>
-                <h4>AutoCompressors</h4>
-                <img
-                  srcset="
-                    images/portfolio/autocompressors-1x.jpg 1x,
-                    images/portfolio/autocompressors-2x.jpg 2x
-                  "
-                  src="images/portfolio/autocompressors-1x.jpg"
-                  alt="A screenshot of a GUI made for the mod, where the auto compressors can be edited."
-                  width="250"
-                  height="180"
-                />
-                <p>
-                  AutoCompressors is a Spigot plugin for the video game
-                  Minecraft, adding new functionality in the form of easily
-                  customizable items that, when in your inventory, can
-                  automatically convert specific items into other ones.
-                </p>
-              </article>
+            <article id="ender-3">
+              <h3>Ender-3</h3>
+              <!-- TODO: Add image -->
+              <img alt="" width="250" height="180" />
+              <p>
+                Over the course of a few years, I have heavily modified what
+                originally was a Creality Ender-3 3D printer with both
+                modifications developed by the incredible community around this
+                printer as well as some of my own ideas and designs.
+              </p>
+            </article>
 
-              <article id="ender-3">
-                <h4>Ender-3</h4>
-                <!-- TODO: Add image -->
-                <img alt="" width="250" height="180" />
-                <p>
-                  Over the course of a few years, I have heavily modified what
-                  originally was a Creality Ender-3 3D printer with both
-                  modifications developed by the incredible community around
-                  this printer as well as some of my own ideas and designs.
-                </p>
-              </article>
+            <article>
+              <h3>3D Design</h3>
+              <img
+                srcset="
+                  images/portfolio/3d-design-1x.jpg 1x,
+                  images/portfolio/3d-design-2x.jpg 2x
+                "
+                src="images/portfolio/3d-design-1x.jpg"
+                alt="Two 3D printed USB stick holders, one pink and one black, on a marble countertop."
+                width="250"
+                height="180"
+              />
+              <p>
+                So far, I have designed and published six simple and useful 3D
+                models to solve problems I had. I used Fusion for the designs
+                and 3D printed them on my Ender-3.
+              </p>
+            </article>
 
-              <article>
-                <h4>3D Design</h4>
-                <img
-                  srcset="
-                    images/portfolio/3d-design-1x.jpg 1x,
-                    images/portfolio/3d-design-2x.jpg 2x
-                  "
-                  src="images/portfolio/3d-design-1x.jpg"
-                  alt="Two 3D printed USB stick holders, one pink and one black, on a marble countertop."
-                  width="250"
-                  height="180"
-                />
-                <p>
-                  So far, I have designed and published six simple and useful 3D
-                  models to solve problems I had. I used Fusion for the designs
-                  and 3D printed them on my Ender-3.
-                </p>
-              </article>
+            <article>
+              <h3>Calculator Pong</h3>
+              <img
+                src="images/portfolio/pong.svg"
+                alt="A screenshot of the game, consisting of a thin rectangle as the player and a small square as the ball."
+                width="250"
+                height="180"
+              />
+              <p>
+                I made a simple clone of Pong coded in TI-Basic for the TI-84
+                Plus <abbr title="Color Edition">CE</abbr> calculator.
+              </p>
+            </article>
 
-              <article>
-                <h4>Calculator Pong</h4>
-                <img
-                  src="images/portfolio/pong.svg"
-                  alt="A screenshot of the game, consisting of a thin rectangle as the player and a small square as the ball."
-                  width="250"
-                  height="180"
-                />
-                <p>
-                  I made a simple clone of Pong coded in TI-Basic for the TI-84
-                  Plus <abbr title="Color Edition">CE</abbr> calculator.
-                </p>
-              </article>
-
-              <article>
-                <h4>Extra Experience</h4>
-                <!-- TODO: Add image -->
-                <img alt="" width="250" height="180" />
-                <p>
-                  I program in Python for small projects and have experience
-                  with Git, Unix shells, and the router software OpenWRT.
-                </p>
-              </article>
-            </div>
-          </section>
+            <article>
+              <h3>Extra Experience</h3>
+              <!-- TODO: Add image -->
+              <img alt="" width="250" height="180" />
+              <p>
+                I program in Python for small projects and have experience with
+                Git, Unix shells, and the router software OpenWRT.
+              </p>
+            </article>
+          </div>
         </section>
       </main>
 
