--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
               target="_blank"
               rel="noopener"
               aria-label="Spotify"
-              href="https://open.spotify.com/artist/78gALtfse3p14cJF1IYDSS?si=KXynsRuhSpmB95j_Ijwiow"
+              href="https://open.spotify.com/artist/78gALtfse3p14cJF1IYDSS"
             >
               <svg
                 width="40px"
@@ -365,12 +365,29 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 <span class="italic">The Songs We Leave Behind</span>. I sang
                 and played guitar for the song, as well as helping produce it.
               </p>
+              <p class="card-link">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://open.spotify.com/track/31JWpNe9bWB4ZHVZvNkBZQ"
+                  >View Song on Spotify</a
+                >
+              </p>
             </article>
 
             <article>
               <h3>Performance</h3>
               <!-- TODO: Add image -->
-              <img alt="" width="250" height="180" />
+              <img
+                srcset="
+                  images/portfolio/performance-1x.jpg 1x,
+                  images/portfolio/performance-2x.jpg 2x
+                "
+                src="images/portfolio/performance-1x.jpg"
+                alt="Ethan Bayer playing guitar and singing at an outdoor performance."
+                width="250"
+                height="180"
+              />
               <p>
                 I have played guitar for over nine years, and I have performed
                 various times.
@@ -387,7 +404,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
               <h3>Conditional Switch</h3>
               <img
                 src="images/portfolio/conditional-switch.svg"
-                alt="A mockup of the game, including the player, saws, and octagons with question marks in them."
+                alt="A mockup of the game, including the player, saws, and question mark blocks."
                 width="250"
                 height="180"
               />
@@ -395,6 +412,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 Conditional Switch is a video game made using the Unity game
                 engine as well as C# for scripting. You can play it in your
                 browser or download the game for Windows and MacOS.
+              </p>
+              <p class="card-link">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://github.com/studioeb/Conditional-Switch"
+                  >View Project on GitHub</a
+                >
               </p>
             </article>
 
@@ -408,6 +433,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 <abbr title="Cascading Style Sheets">CSS</abbr>, which I learned
                 over the course of a month.
               </p>
+              <p class="card-link">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://github.com/studioeb/studioeb.github.io"
+                  >View Source Code on GitHub</a
+                >
+              </p>
             </article>
 
             <article>
@@ -418,7 +451,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                   images/portfolio/autocompressors-2x.jpg 2x
                 "
                 src="images/portfolio/autocompressors-1x.jpg"
-                alt="A screenshot of a GUI made for the mod, where the auto compressors can be edited."
+                alt="A GUI made for the mod in which the auto compressors can be edited."
                 width="250"
                 height="180"
               />
@@ -427,6 +460,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 adding new functionality in the form of easily customizable
                 items that, when in your inventory, can automatically convert
                 specific items into other ones.
+              </p>
+              <p class="card-link">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://github.com/studioeb/AutoCompressors"
+                  >View Project on GitHub</a
+                >
               </p>
             </article>
 
@@ -450,7 +491,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                   images/portfolio/3d-design-2x.jpg 2x
                 "
                 src="images/portfolio/3d-design-1x.jpg"
-                alt="Two 3D printed USB stick holders, one pink and one black, on a marble countertop."
+                alt="Two 3D printed USB stick holders, one pink and one black, on a marble counter."
                 width="250"
                 height="180"
               />
@@ -459,19 +500,35 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 models to solve problems I had. I used Fusion for the designs
                 and 3D printed them on my Ender-3.
               </p>
+              <p class="card-link">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://www.printables.com/@studioeb_1840657"
+                  >View Profile on Printables</a
+                >
+              </p>
             </article>
 
             <article>
               <h3>Calculator Pong</h3>
               <img
                 src="images/portfolio/pong.svg"
-                alt="A screenshot of the game, consisting of a thin rectangle as the player and a small square as the ball."
+                alt="An image from the game with a thin rectangle as the player and a small square as the ball."
                 width="250"
                 height="180"
               />
               <p>
                 I made a simple clone of Pong coded in TI-Basic for the TI-84
                 Plus <abbr title="Color Edition">CE</abbr> calculator.
+              </p>
+              <p class="card-link">
+                <a
+                  target="_blank"
+                  rel="noopener"
+                  href="https://github.com/studioeb/CE-Pong"
+                  >View Project on GitHub</a
+                >
               </p>
             </article>
 
