Change website title and description

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Ethan Bayer</title>
+    <title>Ethan Bayer - Developer & Musician</title>
     <meta name="author" content="Ethan Bayer" />
     <meta
       name="description"
-      content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
+      content="Ethan Bayer is a developer and musician programming games, designing websites, and building other technology projects while writing and producing music."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="hsl(210, 98%, 16%)" />
@@ -49,10 +49,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <meta name="apple-mobile-web-app-title" content="Ethan Bayer" />
 
     <!-- Open Graph Data -->
-    <meta property="og:title" content="Ethan Bayer" />
+    <meta property="og:title" content="Ethan Bayer - Developer & Musician" />
     <meta
       property="og:description"
-      content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
+      content="Ethan Bayer is a developer and musician programming games, designing websites, and building other technology projects while writing and producing music."
     />
     <meta property="og:url" content="https://studioeb.github.io/" />
     <meta property="og:type" content="website" />
@@ -66,10 +66,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="studioeb.github.io" />
     <meta property="twitter:url" content="https://studioeb.github.io" />
-    <meta name="twitter:title" content="Ethan Bayer" />
+    <meta name="twitter:title" content="Ethan Bayer - Developer & Musician" />
     <meta
       name="twitter:description"
-      content="Ethan Bayer is a developer and musician programming games, websites, and building other technology projects while writing and producing music."
+      content="Ethan Bayer is a developer and musician programming games, designing websites, and building other technology projects while writing and producing music."
     />
     <meta name="twitter:image" content="images/ogp-image.png" />
     <meta
