Added Google site verification

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       content="Ethan Bayer's logo — containing the words Ethan Bayer: Developer. Musician."
     />
 
+    <meta
+      name="google-site-verification"
+      content="WPtdKOC8xPTy5O4mZj1dppU4y028Jc-rqzb6rbSVXvM"
+    />
+
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/sidebar.css" />
 
