Fixed minor bugs and added images

--- a/index.html
+++ b/index.html
@@ -431,7 +431,16 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
             <article>
               <h3>Personal Website</h3>
               <!-- TODO: Add image -->
-              <img alt="" width="250" height="180" />
+              <img
+                srcset="
+                  images/portfolio/website-1x.jpg 1x,
+                  images/portfolio/website-2x.jpg 2x
+                "
+                src="images/portfolio/website-1x.jpg"
+                alt="The front page of Ethan Bayer's website, with cards for each portfolio item."
+                width="250"
+                height="180"
+              />
               <p>
                 I made this website, my personal portfolio, from scratch with
                 <abbr title="HyperText Markup Language">HTML</abbr> and
@@ -479,7 +488,6 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
             <article id="ender-3">
               <h3>Ender-3</h3>
               <!-- TODO: Add image -->
-              <img alt="" width="250" height="180" />
               <p>
                 Over the course of a few years, I have heavily modified what
                 originally was a Creality Ender-3 3D printer with both
@@ -539,8 +547,16 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
             <article>
               <h3>Extra Experience</h3>
-              <!-- TODO: Add image -->
-              <img alt="" width="250" height="180" />
+              <img
+                srcset="
+                  images/portfolio/extra-1x.jpg 1x,
+                  images/portfolio/extra-2x.jpg 2x
+                "
+                src="images/portfolio/extra-1x.jpg"
+                alt="An open shell modifying an HTML and CSS project."
+                width="250"
+                height="180"
+              />
               <p>
                 I program in Python for small projects and have experience with
                 Git, Unix shells, and the router software OpenWRT.
