Modified Printables text

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       content="Ethan Bayer is a developer and musician programming games, designing websites, and building other technology projects while writing and producing music."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="canonical" href="https://studioeb.github.io" />
     <meta name="theme-color" content="hsl(210, 98%, 16%)" />
 
     <link
@@ -509,9 +510,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 height="180"
               />
               <p>
-                So far, I have designed and published six simple and useful 3D
-                models to solve problems I had. I used Fusion for the designs
-                and 3D printed them on my Ender-3.
+                I have designed and published numerous 3D models on Printables.
+                I used Autodesk Fusion for the designs and 3D printed them on my
+                modded Ender-3.
               </p>
               <p class="card-link">
                 <a
