Changed printables link

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
               target="_blank"
               rel="noopener"
               aria-label="Printables"
-              href="https://www.printables.com/@studioeb_1840657"
+              href="https://www.printables.com/@studioeb"
             >
               <svg
                 width="40px"
@@ -518,7 +518,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 <a
                   target="_blank"
                   rel="noopener"
-                  href="https://www.printables.com/@studioeb_1840657"
+                  href="https://www.printables.com/@studioeb"
                   >View Profile on Printables</a
                 >
               </p>
